keycloak integgrate with angular app

--- a/src/app/component/google/google.component.html
+++ b/src/app/component/google/google.component.html
@@ -1,4 +1,5 @@
 <!-- <p>Google work</p> -->
 <!-- <a href="https://www.google.com" target="_blank">open google</a> -->
 
-<a href="https://www.google.com" >open google</a>
+<!-- <a href="https://www.google.com" target="_blank">open google</a> -->
+<iframe src="http://localhost:8080/auth" width="100%" height="100%" ></iframe> 
