--- a/src/app/component/menu/menu.component.html
+++ b/src/app/component/menu/menu.component.html
@@ -1,9 +1,9 @@
-<!-- 
+
 <div class="row">
     <div class="col-md-2">
       <ul>
         <li><button (click)="googleSet()" >Google</button></li>
-        <li><button (click)="kibanaSet()">kibana</button></li>
+        <li><button (click)="kibanaSet()">kibana</button></li></ul>
        
        
     </div>
@@ -12,11 +12,12 @@
         <app-kibana></app-kibana>
       </div>
       <div *ngIf="isGoogle">
-        <app-google></app-google> 
+        <app-google></app-google>
+        <!-- <a href="google">google</a> -->
 
       </div>
     </div>
-</div> -->
-<a href="google">google</a><br>
-<a href="kibana">kibana</a>
+</div>
+<!-- <a href="google">google</a><br>
+<a href="kibana">kibana</a> -->
       
